--- a/ikan2/css/style.ikan.css
+++ b/ikan2/css/style.ikan.css
@@ -170,7 +170,7 @@ a:hover.swiper-button-next,a:hover.swiper-button-prev{color: #fff;background:#ff
 
 
 
-.vodlist_thumb{position: relative;display: block;padding-top: 55%;background: url(../img/load.gif) no-repeat #ebebeb;background-position: 100% 50%;background-size: cover;border-radius: 5px;overflow: hidden;}
+.vodlist_thumb{position: relative;display: block;padding-top: 55%;background: url(../img/load_w.gif) no-repeat #ebebeb;background-position: 100% 50%;background-size: cover;border-radius: 5px;overflow: hidden;}
 .vodlist_thumb .play,.balist_thumb .play,.topiclist_thumb .play{background: rgba(236, 229, 119, 0.11) url(../img/play.svg) center no-repeat;}
 .vodlist_thumb .play,.balist_thumb .play,.topiclist_thumb .play,.artlist_thumb .look{position: absolute;top: 0;z-index: 1;width: 100%;height: 100%;background-size: 25% 25%;opacity: 0;filter: alpha(opacity=0);transition: opacity 300ms linear;-webkit-transform: scale(1.5);-moz-transform: scale(1.5);-ms-transform: scale(1.5);-o-transform: scale(1.5);transform: scale(1.5);-webkit-transition: all ease-out .35s;transition: all ease-out .35s;}
 .vodlist_thumb:hover .play,.balist_thumb:hover .play,.topiclist_thumb:hover .play,.artlist_thumb:hover .look{opacity: 1;filter: alpha(opacity=1);-webkit-transform: scale(1);-moz-transform: scale(1);-ms-transform: scale(1);-o-transform: scale(1);transform: scale(1);}
